# doc-analyser

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile.gateway  Dockerfile.sandbox  Dockerfile.worker  pyproject.toml
backend/backend/common/: auth.py  config.py  redis_cleanup.py  redis_client.py
backend/backend/gateway/: api.py  config.py  main.py  models.py  services.py
backend/backend/models/: analysis.py  project.py  user.py
backend/backend/routers/: analysis.py  auth.py  projects.py
backend/backend/services/: analyse_service.py  analysis_service.py  auth_service.py  project_service.py
backend/backend/worker/: analysis_pipeline.py  celery_app.py  config.py  container_monitor.py  docker_runner.py  execute_use_case.py  logger.py  parallel_executor.py  tasks.py  use_case.py
backend/tests/: link_job_to_project.py
docs/: demo-mode-implementation.md  frontend-architecture.md  project.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/demo/: job.json  use_case_0.py  use_case_1.py  use_case_10.py  use_case_2.py  use_case_2_mock.py  use_case_3.py  use_case_4.py  use_case_5.py  use_case_6.py  use_case_7.py  use_case_8.py  use_case_9.py  use_case_results_0.json  use_case_results_1.json  use_case_results_10.json  use_case_results_11.json  use_case_results_12.json  use_case_results_13.json  use_case_results_14.json  use_case_results_15.json  use_case_results_2.json  use_case_results_3.json  use_case_results_4.json  (+5 more)
frontend/src/: middleware.ts
nbs/: redis.ipynb
tests/: test_analyse_doc.py
(+38 files in other folders)
